refactored network call method into googleplacesutility camera now zoomes into the area with the markers ith bounds.

--- a/app/src/main/res/layout/fragment_trending.xml
+++ b/app/src/main/res/layout/fragment_trending.xml
@@ -10,8 +10,8 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@android:drawable/ic_menu_camera"
         android:id="@+id/trendingImageFrag"
+        android:scaleType="fitXY"
         android:layout_weight="1" />
 
     <TextView
