--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -22,4 +22,16 @@
     </android.support.design.widget.AppBarLayout>
 
 
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+
+        android:id="@+id/prefList"/>
+
+
+
+
+
 </android.support.design.widget.CoordinatorLayout>
