--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,15 +10,27 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="assasingh.nearmev2.View.MainActivity"
     tools:showIn="@layout/app_bar_main">
+    
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <android.support.v4.view.ViewPager
-        android:layout_width="match_parent"
-        android:layout_height="207dp"
-        android:background="@drawable/border"
-        android:id="@+id/trending"
+        <android.support.v4.view.ViewPager
+            android:layout_width="match_parent"
+            android:layout_height="207dp"
+            android:background="@drawable/border"
+            android:id="@+id/trending"
 
 
-        />
+            />
+
+
+
+    </LinearLayout>
+
+
+    
 
     <TextView
         android:layout_width="match_parent"
