--- a/app/src/main/res/layout/content_near_me_card.xml
+++ b/app/src/main/res/layout/content_near_me_card.xml
@@ -56,6 +56,7 @@
                             android:layout_height="60dp"
                             android:layout_gravity="bottom|right"
                             android:paddingRight="10dp"
+                            android:tint="#000000"
                             android:src="@drawable/tick" />
 
                         <ImageView
@@ -247,7 +248,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:textStyle="bold"
-                    android:text="Add to my day plan"/>
+                    android:background="@drawable/button_border"
+                    android:textColor="#ffffff"
+                    android:text="I want to visit this place"/>
 
             </LinearLayout>
 
