--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,17 +20,11 @@
             android:layout_width="match_parent"
             android:layout_height="207dp"
             android:background="@drawable/border"
-            android:id="@+id/trending"
-
-
-            />
-
+            android:id="@+id/trending" />
 
 
     </LinearLayout>
 
-
-    
 
     <TextView
         android:layout_width="match_parent"
