List and Map adaptor view works correctly. unable to pass extras from fragment to activity (postcard)
TODO
images next to list results - may not do this in listview results
user selection and input
user preferences
Day Plan
flag sites as visited
user should be able to record personal notes about the site and photos once visited
allow the user to generate an itinerary based on sites from favs list, identifying which site to visit and in which order.

--- a/app/src/main/res/layout/nearme_list_row.xml
+++ b/app/src/main/res/layout/nearme_list_row.xml
@@ -7,14 +7,29 @@
     tools:context="assasingh.nearmev2.View.FavouritePlaces"
     android:weightSum="1">
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginLeft="7dp"
-        android:id="@+id/placeImage"
-        android:src="@drawable/circle"
-        />
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="7dp"
+            android:id="@+id/placeImage"
+            android:src="@drawable/no_image"
+            />
+
+        <ProgressBar
+            android:id="@+id/listImageProgress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+
+    </FrameLayout>
+
+
 
 
 
