--- a/app/src/main/res/layout/activity_post_card.xml
+++ b/app/src/main/res/layout/activity_post_card.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_post_card"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="assasingh.nearmev2.View.Postcard">
+    android:orientation="vertical"
+    tools:context="assasingh.nearmev2.View.PostCard">
 
+
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/placeName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <Button
         android:text="Share"
@@ -19,4 +32,4 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="11dp"
         android:id="@+id/sharePostCard" />
-</RelativeLayout>
+</LinearLayout>
