--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -29,6 +29,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/question"
         android:text="@string/home_greeting"
         android:textColor="#009999"
         android:textSize="16sp"
@@ -49,7 +50,6 @@
             android:id="@+id/theListView">
 
         </ListView>
-
 
     </LinearLayout>
 
