fixed bug when removing from dayplan and favs. Work done on URL generation and getting vlues from pref file.
TODO
images next to list results - may not do this in listview results
Day Plan
  ability to reorder dayPlan,
  map view of day plan and routing from pin to pin.
flag sites as visited
user should be able to record personal notes about the site and photos once visited
allow the user to generate an itinerary based on sites from favs list, identifying which site to visit and in which order.

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -13,8 +13,36 @@
         <item>50000</item>
         <item>32000</item>
         <item>16000</item>
+        <item>8047</item>
         <item>3218</item>
 
+    </string-array>
+
+
+    <string-array name="languageMode">
+        <item>Arabic</item>
+        <item>Bulgarian</item>
+        <item>Bengali</item>
+        <item>Danish</item>
+        <item>German</item>
+        <item>English</item>
+        <item>Spanish</item>
+        <item>French</item>
+        <item>Hindi</item>
+        <item>Japanese</item>
+    </string-array>
+
+    <string-array name="languageValues">
+        <item>ar</item>
+        <item>bg</item>
+        <item>bn</item>
+        <item>da</item>
+        <item>de</item>
+        <item>en</item>
+        <item>es</item>
+        <item>fr</item>
+        <item>hi</item>
+        <item>ja</item>
     </string-array>
 
     <string-array name="costHuman">
@@ -64,7 +92,7 @@
         <item>atm</item>
         <item>bank</item>
         <item>bar</item>
-        <item>beauty Salon</item>
+        <item>beauty_salon</item>
         <item>cafe</item>
         <item>casino</item>
         <item>church</item>
@@ -80,10 +108,10 @@
         <item>stadium</item>
         <item>zoo</item>
     </string-array>
-    <string-array name="defaultActivity">
-        <item>Cafe</item>
 
-        <item>Zoo</item>
+    <string-array name="defaultActivity">
+        <item>cafe</item>
+        <item>zoo</item>
     </string-array>
 
 
