--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -33,6 +33,14 @@
             android:entries="@array/travelMode"
             android:entryValues="@array/travelModeValues" />
 
+        <ListPreference
+            android:key="travel_mode"
+            android:title="I'm going to be.."
+            android:summary="Here you can set your preferred mode of transport."
+            android:defaultValue="walking"
+            android:entries="@array/travelMethod"
+            android:entryValues="@array/travelValues" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
@@ -65,45 +73,5 @@
 
     </PreferenceCategory>
 
-    <PreferenceCategory
-        android:title="Personal Informations"
-        android:key="personal_category">
-
-
-        <EditTextPreference
-            android:key="full_name"
-            android:title="Name"
-            android:summary="Enter Your Complete Name"
-            android:dialogTitle="Your Name"
-            android:dialogMessage="Enter Your Complete Name"
-            android:defaultValue=""
-            android:inputType="textCapWords" />
-
-        <EditTextPreference
-            android:key="email_address"
-            android:title="Email Address"
-            android:summary="Enter Your Email Address"
-            android:dialogTitle="Enter Your Email Address"
-            android:dialogMessage="Enter Your Email Address"
-            android:defaultValue=""
-            android:inputType="textEmailAddress" />
-
-    </PreferenceCategory>
-
-
-    <PreferenceCategory
-        android:title="Customisations"
-        android:key="custom_category">
-
-
-        <RingtonePreference
-            android:key="notification_ringtone"
-            android:title="Notification Ringtone"
-            android:summary="Customise Notification Ringtone for you"
-            android:dialogTitle="Notification Ringtone"
-            android:dialogMessage="Customise Notification Ringtone for you" />
-
-
-    </PreferenceCategory>
 
 </PreferenceScreen>
