--- a/app/src/main/res/layout/day_plan_row.xml
+++ b/app/src/main/res/layout/day_plan_row.xml
@@ -7,15 +7,20 @@
     tools:context="assasingh.nearmev2.View.FavouritePlaces"
     android:weightSum="1">
 
-
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginRight="15dp"
         android:id="@+id/dayPlanImage"
-        android:src="@drawable/circle"
+        android:src="@drawable/no_image"
         />
+
+
+    </FrameLayout>
 
 
     <LinearLayout
