--- a/app/src/main/res/layout/activity_post_card.xml
+++ b/app/src/main/res/layout/activity_post_card.xml
@@ -73,6 +73,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
