--- a/app/src/main/res/layout/favourite_places_row.xml
+++ b/app/src/main/res/layout/favourite_places_row.xml
@@ -40,7 +40,15 @@
         android:textColor="#343434"
         android:textSize="15sp" />
 
-        </LinearLayout>
+        <TextView
+            android:id="@+id/visited"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="#343434"
+            android:textSize="10sp" />
+
+    </LinearLayout>
 
 
 </LinearLayout>
