--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -54,7 +54,7 @@
                     android:orientation="vertical">
 
                     <Button
-                        android:id="@+id/heart"
+                        android:id="@+id/heartAston"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_gravity="center_horizontal"
