--- a/app/src/main/res/layout/content_near_me_card.xml
+++ b/app/src/main/res/layout/content_near_me_card.xml
@@ -159,7 +159,7 @@
                         android:orientation="vertical">
 
                         <ImageView
-                            android:id="@+id/call"
+                            android:id="@+id/callPlace"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:layout_gravity="center_horizontal"
